# RiskBands

./: .gitignore  README.md  RELEASE.md  pyproject.toml  requirements.txt
.github/workflows/: docs-deploy.yml  publish-pypi.yml  publish-testpypi.yml  release-validation.yml  tests.yml
docs/: NOTA_TECNICA_Backlog_Missing_Values_Auditavel_NASABinning.txt  NOTA_TECNICA_Backlog_Missing_Values_Auditavel_RiskBands.txt  api_reference.md  index.md  migration.md  riskbands_v2_0_3_melhorias_futuras.txt  supply_chain_dependencies.md
docs-site/: README.md  astro.config.mjs  package-lock.json  package.json
docs-site/public/benchmark-assets/: composition_shift_aggregate_vs_vintage.html  composition_shift_benchmark_board.html  composition_shift_event_rate_curves.html  composition_shift_metric_comparison.html  composition_shift_penalty_breakdown.html  composition_shift_sampling_preview.html  composition_shift_score_distribution.html  composition_shift_selected_heatmap.html  stable_credit_aggregate_vs_vintage.html  stable_credit_benchmark_board.html  stable_credit_event_rate_curves.html  stable_credit_metric_comparison.html  stable_credit_penalty_breakdown.html  stable_credit_sampling_preview.html  stable_credit_score_distribution.html  stable_credit_selected_heatmap.html  temporal_reversal_aggregate_vs_vintage.html  temporal_reversal_benchmark_board.html  temporal_reversal_event_rate_curves.html  temporal_reversal_metric_comparison.html  temporal_reversal_penalty_breakdown.html  temporal_reversal_sampling_preview.html  temporal_reversal_score_distribution.html  temporal_reversal_selected_heatmap.html
docs-site/src/content/docs/: index.md
docs-site/src/content/docs/methodology/: how-to-read-the-charts.md  pd-vintage-benchmark.md  temporal-robustness-in-credit-risk.md  why-not-only-optimal-binning.md  why-riskbands.md
docs-site/src/content/docs/project/: development.md
docs-site/src/content/docs/reference/: after-v1-0.md  publications.md  release-notes.md
docs-site/src/content/docs/technical/: api-overview.md  audit-and-plots.md  examples.md  installation.md  optuna.md  outputs.md  quickstart.md  score-strategy.md
docs-site/src/styles/: custom.css
docs/prompts/: prompt_10_ajustes_pre_rc_readme_gitignore_assets_riskbands.md  prompt_1_testes_regressao_p1_riskbands.md  prompt_2_corrigir_fluxo_categorico_p1_riskbands.md  prompt_3_corrigir_export_bundle_seguro_p1_riskbands.md  prompt_4_implementar_force_numeric_riskbands.md  prompt_5_reforcar_ci_coverage_seguranca_dependencias_riskbands.md  prompt_6_investigar_blocker_pip_audit_dependencias_riskbands.md  prompt_7_corrigir_supply_chain_protobuf_ortools_optbinning_riskbands.md  prompt_8_limpeza_worktree_commits_seguros_riskbands.md  prompt_9_auditoria_pos_commit_assets_readme_riskbands.md
docs/releases/: 2.0.3.md
examples/: QuickStart.ipynb  README.md  pd_vintage_champion_challenger.py  riskbands_synthetic_plotly_comparative_demo.ipynb  riskbands_synthetic_plotly_comparative_demo_with_optimal_vs_optuna.ipynb  temporal_stability_example.py
examples/generalization_objective/: generalization_objective_demo.py
examples/pd_vintage_benchmark/: guia_leitura_benchmark_riskbands_ptbr.md  pd_vintage_benchmark.ipynb  pd_vintage_benchmark.py
examples/pd_vintage_champion_challenger/: pd_vintage_champion_challenger.ipynb  pd_vintage_champion_challenger.py
examples/stable_score/: stable_score_demo.py
examples/temporal_stability/: temporal_stability_example.ipynb  temporal_stability_example.py
nasabinning/: __init__.py  binning_engine.py  compare.py  optuna_optimizer.py  reporting.py  temporal_diagnostics.py  temporal_stability.py  visualizations.py
nasabinning/strategies/: unsupervised.py
nasabinning/utils/: __init__.py  dtypes.py
notebooks/: 01_basic_usage.ipynb  03_optuna_optimization.ipynb  04_test_fit_with_optuna.ipynb  05_temporal_separability_comparison.ipynb  05_test_new_features.ipynb
research/raw_material/: credit_data_synthesizer.py
riskbands/: __init__.py  _version.py  benchmark_plots.py  binning_engine.py  compare.py  metrics.py  objectives.py  optuna_optimizer.py  refinement.py  reporting.py  temporal_diagnostics.py  temporal_stability.py  validators.py  visualizations.py
riskbands/strategies/: __init__.py  categorical.py  supervised.py  unsupervised.py
riskbands/utils/: __init__.py  dtypes.py
scripts/: smoke_test_installed_package.py
tests/: __init__.py  test_api_usability.py  test_auditable_reporting.py  test_binning_engine.py  test_categorical_regressions.py  test_compare.py  test_examples_smoke.py  test_export_bundle_security.py  test_force_numeric.py  test_generalization_objective.py  test_optuna_credit_objective.py  test_optuna_optimizer.py  test_public_api.py  test_refinement.py  test_reporting.py  test_stable_score.py  test_temporal_core.py  test_temporal_diagnostics.py  test_temporal_stability.py  test_unsupervised.py
