[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riskbands"
version = "2.0.1"
description = "Interpretable binning with temporal stability diagnostics for credit risk, PD, and scorecard workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Joao Maia" }]
keywords = [
  "binning",
  "credit-risk",
  "probability-of-default",
  "scorecard",
  "temporal-stability",
  "vintages"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "optbinning>=0.19.0",
  "optuna>=3.5.0",
  "category_encoders>=2.6",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "tqdm>=4.66"
]

[project.optional-dependencies]
viz = [
  "plotly>=6.0"
]
dev = [
  "build>=1.2",
  "black>=24.4",
  "ipykernel>=6.29",
  "openpyxl>=3.1",
  "plotly>=6.0",
  "pytest>=8.2",
  "twine>=5.1"
]

[project.urls]
Homepage = "https://github.com/joaaomaia/RiskBands"
Repository = "https://github.com/joaaomaia/RiskBands"
Issues = "https://github.com/joaaomaia/RiskBands/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["riskbands*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
  "ignore:'force_all_finite' was renamed to 'ensure_all_finite':FutureWarning",
  "ignore:The current default behavior, quantile_method='linear', will be changed:FutureWarning",
  "ignore:Jupyter is migrating its paths to use standard platformdirs:DeprecationWarning",
  "ignore:Could not find the number of physical cores:UserWarning",
  "ignore:ks_2samp.*method=asymp\\.:RuntimeWarning"
]
