[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riskbands"
version = "2.0.2"
description = "Interpretable binning with temporal stability diagnostics for credit risk, PD, and scorecard workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Joao Maia" }]
keywords = [
  "binning",
  "credit-risk",
  "probability-of-default",
  "scorecard",
  "temporal-stability",
  "vintages"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "optbinning>=0.21.0,<0.22",
  "ortools>=9.10.4067,<9.11",
  "protobuf>=5.29.6,<6",
  "optuna>=3.5.0",
  "category_encoders>=2.6",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "tqdm>=4.66"
]

[project.optional-dependencies]
viz = [
  "plotly>=6.0"
]
dev = [
  "build>=1.2",
  "bandit>=1.7",
  "black>=24.4",
  "ipykernel>=6.29",
  "openpyxl>=3.1",
  "pip-audit>=2.7",
  "plotly>=6.0",
  "pytest>=8.2",
  "pytest-cov>=5",
  "ruff>=0.6",
  "twine>=5.1"
]

[project.urls]
Homepage = "https://github.com/joaaomaia/RiskBands"
Repository = "https://github.com/joaaomaia/RiskBands"
Issues = "https://github.com/joaaomaia/RiskBands/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["riskbands*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
  "ignore:'force_all_finite' was renamed to 'ensure_all_finite':FutureWarning",
  "ignore:The current default behavior, quantile_method='linear', will be changed:FutureWarning",
  "ignore:Jupyter is migrating its paths to use standard platformdirs:DeprecationWarning",
  "ignore:Could not find the number of physical cores:UserWarning",
  "ignore:ks_2samp.*method=asymp\\.:RuntimeWarning"
]

[tool.coverage.run]
source = ["riskbands"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:"
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
  # Keep annotation style churn out of this quality-gate hardening pass.
  "UP006",
  "UP007",
  "UP035",
  "UP045"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B018"]
